apps/base/homebridge/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: homebridge
    app.kubernetes.io/name: homebridge
  name: homebridge
  namespace: homebridge
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8581
  selector:
    app.kubernetes.io/instance: homebridge
    app.kubernetes.io/name: homebridge
  type: ClusterIP
