apps/base/homebridge/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: homebridge
    app.kubernetes.io/name: homebridge
  name: homebridge
  namespace: homebridge
spec:
  hostnames:
    - homebridge.example.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: homebridge
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
