apps/base/homebridge/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: homebridge
    app.kubernetes.io/name: homebridge
  name: homebridge
  namespace: homebridge
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homebridge.example.com`)
      middlewares:
        - name: ip-allowlist
        - name: security-headers
      services:
        - name: homebridge
          port: 80
  tls:
    secretName: homebridge-tls
